--- a/content/publication/bo-2022/cite.bib
+++ b/content/publication/bo-2022/cite.bib
@@ -1,6 +1,9 @@
 @article{bo2022,
- author = {Bo, Tong and Ralston, David K},
- journal = {Journal of Physical Oceanography},
- title = {Frontogenesis, mixing, and stratification in estuarine channels with curvature},
- year = {2022}
+  title={Frontogenesis, mixing, and stratification in estuarine channels with curvature},
+  author={Bo, Tong and Ralston, David K},
+  journal={Journal of Physical Oceanography},
+  volume={52},
+  number={7},
+  pages={1333--1350},
+  year={2022}
 }
