--- a/content/publication/bo-2023/cite.bib
+++ b/content/publication/bo-2023/cite.bib
@@ -1,6 +1,10 @@
 @article{bo2023,
- author = {Bo, Tong and Ralston, David K and Geyer, W Rockwell},
- journal = {Journal of Physical Oceanography},
- title = {Sources of drag in estuarine meanders: momentum redistribution, bottom stress enhancement, and bend-scale form drag},
- year = {2023}
+  title={Sources of drag in estuarine meanders: Momentum redistribution, bottom stress enhancement, and bend-scale form drag},
+  author={Bo, Tong and Ralston, David K and Geyer, W Rockwell},
+  journal={Journal of Physical Oceanography},
+  volume={53},
+  number={7},
+  pages={1629--1650},
+  year={2023},
+  publisher={American Meteorological Society}
 }
