--- a/content/publication/bo-2024/cite.bib
+++ b/content/publication/bo-2024/cite.bib
@@ -1,7 +1,10 @@
 @article{bo2024,
- author = {Bo, Tong and Ralston, David K and Garcia, Adrian Mikhail P and Geyer, W Rockwell},
- journal = {Journal of Physical Oceanography},
- publisher = {American Meteorological Society},
- title = {Tidal intrusion fronts, surface convergence, and mixing in an estuary with complex topography},
- year = {2024}
+  title={Tidal intrusion fronts, surface convergence, and mixing in an estuary with complex topography},
+  author={Bo, Tong and Ralston, David K and Garcia, Adrian Mikhail P and Geyer, W Rockwell},
+  journal={Journal of Physical Oceanography},
+  volume={54},
+  number={3},
+  pages={653--677},
+  year={2024},
+  publisher={American Meteorological Society}
 }
