--- a/content/publication/bo-2024/cite.bib
+++ b/content/publication/bo-2024/cite.bib
@@ -1,5 +1,5 @@
 @article{bo2024,
-  title={Tidal intrusion fronts, surface convergence, and mixing in an estuary with complex topography},
+  title={Nutrient Replenishment by Turbulent Mixing in Suspended Macroalgal Farms},
   author={Bo, Tong and Ralston, David K and Garcia, Adrian Mikhail P and Geyer, W Rockwell},
   journal={Journal of Physical Oceanography},
   volume={54},
